--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
     <div class="nav-flex">
         <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="homepage.html" >Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html" >Home</a></li>
             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
             <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
